[package]
name = "v8_rs"
version = "0.1.0"
edition = "2021"
license = Redis Source Available License 2.0 (RSALv2) or the Server Side Public License v1 (SSPLv1)

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.2"

[lib]
name = "v8_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
