[package]
name = "v8_rs"
version = "0.1.0"
edition = "2021"
license = "Redis Source Available License 2.0 (RSALv2) or the Server Side Public License v1 (SSPLv1)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.20", optional = true }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-aux = "4"

[build-dependencies]
bindgen = "0.65"
vergen = { version = "8", features = ["git", "gitcl"] }
lazy_static = "1"

[dev-dependencies]
v8_rs_derive = { path = "./v8-rs-derive/"}
lazy_static = "1"

[lib]
name = "v8_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["debug-server"]
debug-server = ["tungstenite"]
