[package]
name = "v8_rs"
version = "0.3.0"
edition = "2021"
license = "LicenseRef-RSALv2 OR SSPL-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = { version = "0.20", optional = true }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
serde-aux = "4"

[build-dependencies]
bindgen = "0.65"
vergen = { version = "8", features = ["git", "gitcl"] }
lazy_static = "1"

[dev-dependencies]
v8_rs_derive = { path = "./v8-rs-derive/"}
lazy_static = "1"
ctor = "0.2.4"

[lib]
name = "v8_rs"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["debug-server"]
debug-server = ["tungstenite"]

