[package]
name = "v8_rs_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"]}
quote = "1"
v8_rs = { path = "../", optional = true }

[features]
docs = ["v8_rs"]

[lib]
name = "v8_derive"
path = "src/lib.rs"
proc-macro = true
